--- a/functional/generics-type-classes.html
+++ b/functional/generics-type-classes.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <title>Generics as Type Classes - Rust Design Patterns</title>
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="A catalogue of Rust design patterns, anti-patterns and idioms">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -28,13 +27,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -50,7 +49,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -62,7 +61,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -94,7 +93,7 @@
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
@@ -127,7 +126,7 @@
                     </div>
                 </div>
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -187,8 +186,7 @@ enum AuthInfo {
 struct FileDownloadRequest {
     file_name: PathBuf,
     authentication: AuthInfo,
-}
-</code></pre>
+}</code></pre>
 <p>This design might work well enough. But now suppose you needed to support
 adding metadata that was <em>protocol specific</em>. For example, with NFS, you
 wanted to determine what their mount point was in order to enforce additional
@@ -211,8 +209,7 @@ impl FileDownloadRequest {
     pub fn mount_point(&amp;self) -&gt; Option&lt;&amp;Path&gt; {
         self.mount_point.as_ref()
     }
-}
-</code></pre>
+}</code></pre>
 <p>Every caller of <code>mount_point()</code> must check for <code>None</code> and write code to handle
 it. This is true even if they know only NFS requests are ever used in a given
 code path!</p>
@@ -300,8 +297,7 @@ impl FileDownloadRequest&lt;Nfs&gt; {
 
 fn main() {
     // your code here
-}
-</code></pre></pre>
+}</code></pre></pre>
 <p>With this approach, if the user were to make a mistake and use the wrong
 type;</p>
 <pre><code class="language-rust ignore">fn main() {
@@ -313,8 +309,7 @@ type;</p>
         }
         // Rest of the code here
     }
-}
-</code></pre>
+}</code></pre>
 <p>They would get a syntax error. The type <code>FileDownloadRequest&lt;Bootp&gt;</code> does not
 implement <code>mount_point()</code>, only the type <code>FileDownloadRequest&lt;Nfs&gt;</code> does. And
 that is created by the NFS module, not the BOOTP module of course!</p>
@@ -421,15 +416,15 @@ and
 
         </div>
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
     </body>
