--- a/idioms/coercion-arguments.html
+++ b/idioms/coercion-arguments.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <title>Use borrowed types for arguments - Rust Design Patterns</title>
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="A catalogue of Rust design patterns, anti-patterns and idioms">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -28,13 +27,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -50,7 +49,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -62,7 +61,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -94,7 +93,7 @@
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
@@ -127,7 +126,7 @@
                     </div>
                 </div>
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -185,15 +184,13 @@ fn main() {
     // println!(&quot;Ferris: {}&quot;, three_vowels(&quot;Ferris&quot;));
     // println!(&quot;Curious: {}&quot;, three_vowels(&quot;Curious&quot;));
 
-}
-</code></pre></pre>
+}</code></pre></pre>
 <p>This works fine because we are passing a <code>&amp;String</code> type as a parameter.
 If we remove the comments on the last two lines, the example will fail. This
 is because a <code>&amp;str</code> type will not coerce to a <code>&amp;String</code> type. We can fix this
 by simply modifying the type for our argument.</p>
 <p>For instance, if we change our function declaration to:</p>
-<pre><code class="language-rust  ignore">fn three_vowels(word: &amp;str) -&gt; bool {
-</code></pre>
+<pre><code class="language-rust  ignore">fn three_vowels(word: &amp;str) -&gt; bool {</code></pre>
 <p>then both versions will compile and print the same output.</p>
 <pre><code class="language-bash">Ferris: false
 Curious: true
@@ -232,8 +229,7 @@ fn main() {
             println!(&quot;{} has three consecutive vowels!&quot;, word);
         }
     }
-}
-</code></pre></pre>
+}</code></pre></pre>
 <p>Running this example using our function declared with an argument type <code>&amp;str</code>
 will yield</p>
 <pre><code class="language-bash">curious has three consecutive vowels!
@@ -276,15 +272,15 @@ by Herman J. Radtke III</li>
 
         </div>
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
     </body>
