--- a/patterns/behavioural/command.html
+++ b/patterns/behavioural/command.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <title>Command - Rust Design Patterns</title>
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="A catalogue of Rust design patterns, anti-patterns and idioms">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -28,13 +27,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -50,7 +49,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -62,7 +61,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -94,7 +93,7 @@
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
@@ -127,7 +126,7 @@
                     </div>
                 </div>
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -218,8 +217,7 @@ fn main() {
 
     assert_eq!(vec![&quot;create table&quot;, &quot;add field&quot;], schema.execute());
     assert_eq!(vec![&quot;remove field&quot;, &quot;drop table&quot;], schema.rollback());
-}
-</code></pre></pre>
+}</code></pre></pre>
 <h2 id="approach-using-function-pointers"><a class="header" href="#approach-using-function-pointers">Approach: Using function pointers</a></h2>
 <p>We could follow another approach by creating each individual command as
 a different function and store function pointers to invoke these functions later
@@ -269,8 +267,7 @@ fn main() {
     schema.add_migration(add_field, remove_field);
     assert_eq!(vec![&quot;create table&quot;, &quot;add field&quot;], schema.execute());
     assert_eq!(vec![&quot;remove field&quot;, &quot;drop table&quot;], schema.rollback());
-}
-</code></pre></pre>
+}</code></pre></pre>
 <h2 id="approach-using-fn-trait-objects"><a class="header" href="#approach-using-fn-trait-objects">Approach: Using <code>Fn</code> trait objects</a></h2>
 <p>Finally, instead of defining a common command trait we could store
 each command implementing the <code>Fn</code> trait separately in vectors.</p>
@@ -318,8 +315,7 @@ fn main() {
     schema.add_migration(add_field, remove_field);
     assert_eq!(vec![&quot;create table&quot;, &quot;add field&quot;], schema.execute());
     assert_eq!(vec![&quot;remove field&quot;, &quot;drop table&quot;], schema.rollback());
-}
-</code></pre></pre>
+}</code></pre></pre>
 <h2 id="discussion"><a class="header" href="#discussion">Discussion</a></h2>
 <p>If our commands are small and may be defined as functions or passed as a closure
 then using function pointers might be preferable since it does not exploit
@@ -368,15 +364,15 @@ dynamic dispatch provides flexibility when we structure our application.</p>
 
         </div>
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="../../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../../searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../../book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
     </body>
